--- a/src/app/style/css/style.css
+++ b/src/app/style/css/style.css
@@ -1,3 +1,8 @@
+/*$grey-blue: #3c686f;
+$yellow: #eebb1b;
+$azure: #C5E2E5;
+$black: #666;
+$grey: #D1D1D1;*/
 table th {
   font-size: 1.2em; }
   table th * {
@@ -5,10 +10,19 @@ table th {
   table th i:hover {
     color: #26a69a;
     cursor: pointer;
-    transition: color 0.2s; }
+    transition: color .25s ease; }
 
 .btn {
   margin: 2px; }
+
+.btn-flat {
+  transition: background-color .25s ease; }
+  .btn-flat:hover {
+    background-color: #26a69a;
+    color: #343434; }
+  .btn-flat.modal-close:hover {
+    background-color: #F44336;
+    color: #343434; }
 
 #modal-calculator {
   width: 55%;
@@ -19,4 +33,5 @@ table th {
     margin: 0px; }
   #modal-calculator button.btn {
     width: 100%;
-    box-shadow: none; }
+    box-shadow: none;
+    padding: 0px; }
