--- a/src/app/style/sass/style.scss
+++ b/src/app/style/sass/style.scss
@@ -1,98 +1,6 @@
-/*$grey-blue: #3c686f;
-$yellow: #eebb1b;
-$azure: #C5E2E5;
-$black: #666;
-$grey: #D1D1D1;*/
-$black: #343434;
-$green: #26a69a;
-$red: #F44336;
 
-table {
-
-    th {
-        font-size: 1.2em;
-        * {
-            float: right;
-        }
-        i:hover {
-            color: $green;
-            cursor: pointer;
-            transition: color .25s ease;
-        }
-    }
-
-    td {
-        padding: 5px;
-        i {
-            color: $black;
-            margin: 0px 5px;
-            &:hover {
-                color: $green;
-                cursor: pointer;
-                transition: color .25s ease;
-            }
-            &.delete:hover {
-                color: $red;
-            }
-        }
-    }
-
-    th, td {
-        i.material-icons {
-            display: block;
-            text-align: center;
-            float: right;
-        }
-    }
-
-}
-
-.btn {
-    margin: 2px;
-}
-
-.btn-flat {
-    transition: background-color .25s ease;
-    &:hover {
-        background-color: $green;
-        color: $black;
-    }
-    &.modal-close:hover {
-        background-color: $red;
-        color: $black;
-    }
-}
-
-#modal-calculator {
-
-    width: 55%;
-    max-height: 80%;
-
-    button.btn-large, input[type="text"], p {
-        font-size: 1.8em;
-    }
-
-    p {
-        margin: 0px;
-    }
-
-    button {
-
-        &.btn {
-            width: 100%;
-            box-shadow: none;
-            padding: 0px;
-        }
-
-    }
-
-}
-
-#table-data-info {
-    th, td {
-        padding: 0px;
-    }
-    th {
-        text-align: center;
-    }
-}
+@import '_variables.scss';
+@import '_fonts.scss';
+@import '_materialize.scss';
+@import '_elements.scss';
+@import '_components.scss';
