--- a/src/app/style/css/style.css
+++ b/src/app/style/css/style.css
@@ -1,48 +1,151 @@
-/*$grey-blue: #3c686f;
-$yellow: #eebb1b;
-$azure: #C5E2E5;
-$black: #666;
-$grey: #D1D1D1;*/
-table th {
-  font-size: 1.2em; }
-  table th * {
-    float: right; }
-  table th i:hover {
-    color: #26a69a;
-    cursor: pointer;
-    transition: color .25s ease; }
+@font-face {
+  font-family: 'Roboto';
+  src: url("../vendor-font/Roboto/Roboto-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal; }
 
-table td {
-  padding: 5px; }
-  table td i {
-    color: #343434;
-    margin: 0px 5px; }
-    table td i:hover {
-      color: #26a69a;
-      cursor: pointer;
-      transition: color .25s ease; }
-    table td i.delete:hover {
-      color: #F44336; }
+@font-face {
+  font-family: 'Roboto';
+  src: url("../vendor-font/Roboto/Roboto-Thin.ttf") format("truetype");
+  font-weight: normal;
+  font-style: italic; }
 
-table th i.material-icons, table td i.material-icons {
-  display: block;
-  text-align: center;
-  float: right; }
+@font-face {
+  font-family: 'Roboto';
+  src: url("../vendor-font/Roboto/Roboto-Medium.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal; }
 
-.btn {
-  margin: 2px; }
+.btn, .btn.btn-flat, .btn-flat, .modal-footer .btn.btn-flat {
+  margin: 4px;
+  background-color: #253e68;
+  color: #ffffff;
+  border: 2px solid #26a69a;
+  border-radius: 0px;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  transition: background-color .25s ease; }
+  .btn:hover, .btn.btn-flat:hover, .btn-flat:hover, .modal-footer .btn.btn-flat:hover {
+    background-color: #26a69a;
+    color: #ffffff;
+    border-color: #26a69a; }
+  .btn.modal-close, .btn.datepicker-clear, .btn.btn-flat.modal-close, .btn.btn-flat.datepicker-clear, .btn-flat.modal-close, .btn-flat.datepicker-clear, .modal-footer .btn.btn-flat.modal-close, .modal-footer .btn.btn-flat.datepicker-clear {
+    border-color: #F44336; }
+    .btn.modal-close:hover, .btn.datepicker-clear:hover, .btn.btn-flat.modal-close:hover, .btn.btn-flat.datepicker-clear:hover, .btn-flat.modal-close:hover, .btn-flat.datepicker-clear:hover, .modal-footer .btn.btn-flat.modal-close:hover, .modal-footer .btn.btn-flat.datepicker-clear:hover {
+      background-color: #F44336;
+      color: #ffffff;
+      border-color: #F44336; }
 
 .btn-flat {
   transition: background-color .25s ease; }
   .btn-flat:hover {
     background-color: #26a69a;
-    color: #343434; }
+    color: #353333; }
   .btn-flat.modal-close:hover {
     background-color: #F44336;
-    color: #343434; }
+    color: #353333; }
+
+.fixed-action-btn {
+  bottom: initial; }
+  .fixed-action-btn .btn-floating.sidenav-trigger > i.material-icons {
+    color: #ffffff !important;
+    transition: background-color 0.2s ease; }
+    .fixed-action-btn .btn-floating.sidenav-trigger > i.material-icons:hover {
+      background-color: #9FE7F9; }
+
+.modal.open {
+  top: 2% !important;
+  overflow: visible; }
+  .modal.open .modal-content, .modal.open .modal-footer {
+    background-color: #253e68; }
+
+.dropdown-content {
+  background-color: #263238; }
+
+.datepicker-modal .datepicker-calendar-container {
+  flex: none; }
+
+.datepicker-modal .datepicker-table {
+  margin: 10px; }
+  .datepicker-modal .datepicker-table td, .datepicker-modal .datepicker-table td > button {
+    transition: background-color 2s ease-in-out;
+    border-radius: 0%; }
+
+.datepicker-modal .datepicker-footer {
+  justify-content: flex-end; }
+  .datepicker-modal .datepicker-footer button {
+    margin: 4px 0px 4px 4px; }
+
+body {
+  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 1.1em;
+  top: 0px;
+  background-color: #263238;
+  color: #ffffff; }
+  body input, body textarea {
+    color: #ffffff; }
+  body i.material-icons {
+    color: #26a69a !important; }
+  body i.material-icons:hover {
+    color: #9FE7F9 !important; }
+  body i.green-text {
+    color: #0cd40c !important; }
+  body i.red-text {
+    color: #F44336 !important; }
+  body label, body th {
+    color: #ffffff; }
+
+table {
+  background-color: #253e68; }
+  table th, table td {
+    border: 1px solid #9e9e9e; }
+  table td {
+    padding: 5px 2px;
+    border-radius: 0px; }
+  table th i.material-icons, table td i.material-icons {
+    width: 100%;
+    margin: 0px 5px;
+    display: block;
+    text-align: center; }
+    table th i.material-icons:hover, table td i.material-icons:hover {
+      color: #9FE7F9;
+      cursor: pointer;
+      transition: color .25s ease; }
+    table th i.material-icons.delete:hover, table td i.material-icons.delete:hover {
+      color: #F44336; }
+
+i.material-icons.hover-red:hover, .hover-red:hover {
+  color: #F44336 !important; }
+
+#table-overview tr:hover {
+  background-color: #263238; }
+
+#table-overview th > div, #table-overview td > div {
+  display: flex;
+  justify-content: center; }
+
+#table-overview td:first-child > i {
+  width: 100%;
+  margin: 0px; }
+
+#table-overview th:nth-child(2) span:before, #table-overview td:nth-child(2) span:before {
+  left: 0px; }
+
+#table-data-info tr {
+  background-color: transparent; }
+  #table-data-info tr th, #table-data-info tr td {
+    padding: 0px;
+    border: 1px solid #9e9e9e;
+    font-size: 1.1em; }
+  #table-data-info tr td {
+    font-style: italic; }
+    #table-data-info tr td:hover {
+      transition: background-color 0.2s ease;
+      background-color: #263238; }
+  #table-data-info tr th {
+    text-align: center; }
 
 #modal-calculator {
-  width: 55%;
+  width: 70%;
   max-height: 80%; }
   #modal-calculator button.btn-large, #modal-calculator input[type="text"], #modal-calculator p {
     font-size: 1.8em; }
@@ -52,9 +155,25 @@ table th i.material-icons, table td i.material-icons {
     width: 100%;
     box-shadow: none;
     padding: 0px; }
+    #modal-calculator button.btn.operation {
+      border-color: #263238; }
 
-#table-data-info th, #table-data-info td {
-  padding: 0px; }
+#homepage__search-input {
+  margin-bottom: 0px; }
 
-#table-data-info th {
-  text-align: center; }
+#filters-menu-wrapper {
+  padding-right: 0px; }
+
+#filters-menu {
+  background-color: #253e68;
+  border: 1px solid #9e9e9e; }
+  #filters-menu > div {
+    width: 95%;
+    margin: auto; }
+
+#sidenav {
+  background-color: #253e68; }
+  #sidenav li a {
+    color: #ffffff; }
+  #sidenav .user-view {
+    text-align: center; }
