--- a/src/app/style/css/style.css
+++ b/src/app/style/css/style.css
@@ -54,7 +54,8 @@
 
 .modal.open {
   top: 2% !important;
-  overflow: visible; }
+  overflow: visible;
+  outline-width: 0px; }
   .modal.open .modal-content, .modal.open .modal-footer {
     background-color: #253e68; }
 
@@ -74,6 +75,14 @@
   justify-content: flex-end; }
   .datepicker-modal .datepicker-footer button {
     margin: 4px 0px 4px 4px; }
+
+.pagination {
+  display: flex;
+  justify-content: flex-end; }
+  .pagination li a {
+    color: #ffffff; }
+  .pagination li.active {
+    background-color: #263238; }
 
 body {
   font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -116,7 +125,7 @@ table {
 i.material-icons.hover-red:hover, .hover-red:hover {
   color: #F44336 !important; }
 
-#table-overview tr:hover {
+#table-overview tbody > tr:hover {
   background-color: #263238; }
 
 #table-overview th > div, #table-overview td > div {
@@ -177,3 +186,21 @@ i.material-icons.hover-red:hover, .hover-red:hover {
     color: #ffffff; }
   #sidenav .user-view {
     text-align: center; }
+
+#pagination-wrapper {
+  background-color: #253e68;
+  border: 1px solid #9e9e9e;
+  margin: 0px;
+  padding: 0.75rem 0.75rem 0 0.75rem; }
+  #pagination-wrapper .col {
+    padding-left: 0px;
+    padding-right: 0px; }
+  #pagination-wrapper #pagination-choice {
+    display: flex;
+    justify-content: center; }
+    #pagination-wrapper #pagination-choice * {
+      display: block;
+      margin: auto;
+      width: 50%;
+      float: left;
+      text-align: center; }
