--- a/src/app/style/sass/_components.scss
+++ b/src/app/style/sass/_components.scss
@@ -95,21 +95,37 @@
 #pagination-wrapper {
     background-color: $background-element-color;
     border: 1px solid $border-element-color;
-    margin: 0px;
-    padding: 0.75rem 0.75rem 0 0.75rem;
+    margin: 0px 0px 10px 0px;
+    padding: 0em .5em;
     .col {
         padding-left: 0px;
         padding-right: 0px;
     }
     #pagination-choice {
+        margin: 0px;
+        padding: .5em 0em;
         display: flex;
         justify-content: center;
         * {
             display: block;
             margin: auto;
+            height: auto;
             width: 50%;
             float: left;
             text-align: center;
+        }
+        input {
+            padding: .2em 0em;
+        }
+    }
+    #table-overview-pagination {
+        margin: 0px;
+        padding: .5em 0em;
+        li a {
+            padding: 0em .5em;
+        }
+        li:first-child a, li:last-child a {
+            padding: 0em;
         }
     }
 }
