--- a/src/app/style/css/style.css
+++ b/src/app/style/css/style.css
@@ -125,20 +125,6 @@ table {
 i.material-icons.hover-red:hover, .hover-red:hover {
   color: #F44336 !important; }
 
-#table-overview tbody > tr:hover {
-  background-color: #263238; }
-
-#table-overview th > div, #table-overview td > div {
-  display: flex;
-  justify-content: center; }
-
-#table-overview td:first-child > i {
-  width: 100%;
-  margin: 0px; }
-
-#table-overview th:nth-child(2) span:before, #table-overview td:nth-child(2) span:before {
-  left: 0px; }
-
 #table-data-info tr {
   background-color: transparent; }
   #table-data-info tr th, #table-data-info tr td {
@@ -187,32 +173,56 @@ i.material-icons.hover-red:hover, .hover-red:hover {
   #sidenav .user-view {
     text-align: center; }
 
-#pagination-wrapper {
+#table-overview > .row {
   background-color: #253e68;
-  border: 1px solid #9e9e9e;
   margin: 0px 0px 10px 0px;
-  padding: 0em .5em; }
-  #pagination-wrapper .col {
+  padding: 0px; }
+  #table-overview > .row .col {
     padding-left: 0px;
     padding-right: 0px; }
-  #pagination-wrapper #pagination-choice {
-    margin: 0px;
-    padding: .5em 0em;
+  #table-overview > .row table tbody > tr:hover {
+    background-color: #263238; }
+  #table-overview > .row table th > div, #table-overview > .row table td > div {
     display: flex;
     justify-content: center; }
-    #pagination-wrapper #pagination-choice * {
-      display: block;
-      margin: auto;
-      height: auto;
-      width: 50%;
-      float: left;
-      text-align: center; }
-    #pagination-wrapper #pagination-choice input {
-      padding: .2em 0em; }
-  #pagination-wrapper #table-overview-pagination {
-    margin: 0px;
-    padding: .5em 0em; }
-    #pagination-wrapper #table-overview-pagination li a {
-      padding: 0em .5em; }
-    #pagination-wrapper #table-overview-pagination li:first-child a, #pagination-wrapper #table-overview-pagination li:last-child a {
-      padding: 0em; }
+  #table-overview > .row table td:first-child > i {
+    width: 100%;
+    margin: 0px; }
+  #table-overview > .row table th:nth-child(2) span:before, #table-overview > .row table td:nth-child(2) span:before {
+    left: 0px; }
+  #table-overview > .row#pagination-wrapper {
+    border: 1px solid #9e9e9e; }
+    #table-overview > .row#pagination-wrapper #pagination-choice {
+      margin: 0px;
+      padding: .5em 0em;
+      display: flex;
+      justify-content: center; }
+      #table-overview > .row#pagination-wrapper #pagination-choice * {
+        display: block;
+        margin: auto;
+        height: auto;
+        width: 50%;
+        float: left;
+        text-align: center; }
+      #table-overview > .row#pagination-wrapper #pagination-choice input {
+        padding: .2em 0em; }
+    #table-overview > .row#pagination-wrapper #table-overview-pagination {
+      margin: 0px;
+      padding: .5em 0em; }
+      #table-overview > .row#pagination-wrapper #table-overview-pagination li a {
+        padding: 0em .5em; }
+      #table-overview > .row#pagination-wrapper #table-overview-pagination li:first-child a, #table-overview > .row#pagination-wrapper #table-overview-pagination li:last-child a {
+        padding: 0em; }
+
+#chart-overview {
+  border: 1px solid #9e9e9e;
+  background-color: #253e68;
+  margin: 0px;
+  padding: .8em .5em .0em .5em; }
+  #chart-overview .col {
+    padding: 0em; }
+  #chart-overview text {
+    fill: #ffffff; }
+  #chart-overview .recharts-default-tooltip {
+    background-color: #263238;
+    color: #ffffff; }
