--- a/src/app/style/sass/_components.scss
+++ b/src/app/style/sass/_components.scss
@@ -79,6 +79,7 @@
     background-color: $background-element-color;
     li a {
         color: $text-color;
+        height: 42px;
     }
     .user-view {
         text-align: center;
